--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-svg-icons-monorepo",
   "private": true,
-  "version": "2.0.4",
+  "version": "3.0.0-pre.1",
   "license": "MIT",
   "author": "Vben",
   "scripts": {
@@ -31,28 +31,38 @@
   },
   "homepage": "https://github.com/anncwb/vite-plugin-svg-icons/tree/master/#readme",
   "devDependencies": {
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0",
-    "@types/html-minifier-terser": "^6.1.0",
-    "@types/jsdom": "^16.2.14",
-    "@types/node": "^17.0.13",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
-    "commitizen": "^4.2.4",
-    "conventional-changelog-cli": "^2.2.2",
+    "@commitlint/cli": "^17.6.5",
+    "@commitlint/config-conventional": "^17.6.5",
+    "@types/html-minifier-terser": "^7.0.0",
+    "@types/jsdom": "^21.1.1",
+    "@types/node": "^20.3.1",
+    "@typescript-eslint/eslint-plugin": "^5.59.11",
+    "@typescript-eslint/parser": "^5.59.11",
+    "commitizen": "^4.3.0",
+    "conventional-changelog-cli": "^3.0.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-html": "^6.2.0",
+    "eslint": "^8.43.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-html": "^7.1.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.2",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "tsup": "^5.11.11",
-    "typescript": "^4.5.5",
-    "unbuild": "^0.6.9",
-    "vite": "^2.7.13",
-    "vitest": "^0.2.5"
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
+    "rimraf": "^5.0.1",
+    "tsup": "^7.0.0",
+    "typescript": "^5.1.3",
+    "unbuild": "^1.2.1",
+    "vite": "^2.9.16",
+    "vitest": "^0.32.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "decode-uri-component": "^0.2.2",
+      "loader-utils": "^2",
+      "minimist": "^1.2.6",
+      "postcss": ">=7.0.36",
+      "uuid": "^7",
+      "vite": ">2.9.16"
+    }
   },
   "lint-staged": {
     "*": [
