--- a/packages/playground/basic/package.json
+++ b/packages/playground/basic/package.json
@@ -22,7 +22,7 @@
     "cross-env": "^7.0.3",
     "http-server": "^14.1.0",
     "typescript": "^4.5.5",
-    "vite": "^2.7.13",
-    "vite-plugin-svg-icons": "workspace:*"
+    "vite": "^2.9.16",
+    "@digitalacorn/vite-plugin-svg-icons": "workspace:*"
   }
 }
