--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digitalacorn/vite-plugin-svg-icons",
-  "version": "2.0.4",
+  "version": "3.0.0-pre.1",
   "description": "Vite Plugin for fast creating SVG sprites.",
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
